# rank1_covariance

./: CMakeLists.txt  Makefile  README.md  kernels.cu  kernels.hpp  main.cu  main.py
